--- a/html/game.html
+++ b/html/game.html
@@ -114,14 +114,42 @@
       #current = {};
       #currentCopy = {};
       #prevShape = [];
-      #maxY = -1;
-      //첫번째 행기준으로 잡음.
       #shape = {
         0:{0:{0:{x:0,y:0},1:{x:1,y:0},2:{x:1,y:1},3:{x:1,y:2}},
            1:{0:{x:2,y:0},1:{x:2,y:1},2:{x:1,y:1},3:{x:0,y:1}},
            2:{0:{x:1,y:2},1:{x:0,y:2},2:{x:0,y:1},3:{x:0,y:0}},
            3:{0:{x:0,y:1},1:{x:0,y:0},2:{x:1,y:0},3:{x:2,y:0}},
         },//기억
+        1:{0:{0:{x:0,y:1},1:{x:0,y:0},2:{x:1,y:0},3:{x:2,y:0}},
+           1:{0:{x:0,y:0},1:{x:1,y:0},2:{x:1,y:1},3:{x:1,y:2}},
+           2:{0:{x:2,y:0},1:{x:2,y:1},2:{x:1,y:1},3:{x:0,y:1}},
+           3:{0:{x:0,y:0},1:{x:0,y:1},2:{x:0,y:2},3:{x:1,y:2}},
+        },
+        2:{0:{0:{x:0,y:0},1:{x:1,y:0},2:{x:1,y:1},3:{x:0,y:1}},
+           1:{0:{x:0,y:0},1:{x:1,y:0},2:{x:1,y:1},3:{x:0,y:1}},
+           2:{0:{x:0,y:0},1:{x:1,y:0},2:{x:1,y:1},3:{x:0,y:1}},
+           3:{0:{x:0,y:0},1:{x:1,y:0},2:{x:1,y:1},3:{x:0,y:1}},
+        },
+        3:{0:{0:{x:0,y:0},1:{x:1,y:0},2:{x:1,y:1},3:{x:2,y:1}},
+           1:{0:{x:1,y:0},1:{x:1,y:1},2:{x:0,y:1},3:{x:0,y:2}},
+           2:{0:{x:0,y:0},1:{x:1,y:0},2:{x:1,y:1},3:{x:2,y:1}},
+           3:{0:{x:1,y:0},1:{x:1,y:1},2:{x:0,y:1},3:{x:0,y:2}},
+        },
+        4:{0:{0:{x:0,y:1},1:{x:1,y:1},2:{x:1,y:0},3:{x:2,y:0}},
+           1:{0:{x:0,y:0},1:{x:0,y:1},2:{x:1,y:1},3:{x:1,y:2}},
+           2:{0:{x:0,y:1},1:{x:1,y:1},2:{x:1,y:0},3:{x:2,y:0}},
+           3:{0:{x:0,y:0},1:{x:0,y:1},2:{x:1,y:1},3:{x:1,y:2}},
+        },
+        5:{0:{0:{x:0,y:0},1:{x:1,y:0},2:{x:2,y:0},3:{x:3,y:0}},
+           1:{0:{x:0,y:0},1:{x:0,y:1},2:{x:0,y:2},3:{x:0,y:3}},
+           2:{0:{x:0,y:0},1:{x:1,y:0},2:{x:2,y:0},3:{x:3,y:0}},
+           3:{0:{x:0,y:0},1:{x:0,y:1},2:{x:0,y:2},3:{x:0,y:3}},
+        },
+        6:{0:{0:{x:1,y:0},1:{x:0,y:1},2:{x:1,y:1},3:{x:2,y:1}},
+           1:{0:{x:0,y:0},1:{x:0,y:1},2:{x:1,y:1},3:{x:0,y:2}},
+           2:{0:{x:0,y:0},1:{x:1,y:0},2:{x:2,y:0},3:{x:1,y:1}},
+           3:{0:{x:0,y:1},1:{x:1,y:0},2:{x:1,y:1},3:{x:1,y:2}},
+        },
         //  1:{0:{},1:{},2:{},3:{}},//반대기억
         //  2:{0:{},1:{},2:{},3:{}},//일자
         //  3:{0:{},1:{},2:{},3:{}},//네모
@@ -169,9 +197,9 @@
         } catch (error) {
           console.log("끝");
         }
-
+//Math.floor(Math.random() * 7)
         this.#prevShape = [];
-        this.#current = {x: parseInt(this.#x/2),y:0,state:{},shape:0,pos:0};
+        this.#current = {x: parseInt(this.#x/2),y:0,state:{},shape:6,pos:0};
         this.pos();
 
         let viewChekc = 0;
