--- a/html/game.html
+++ b/html/game.html
@@ -114,6 +114,8 @@
       #current = {};
       #currentCopy = {};
       #prevShape = [];
+      #pos = false;
+      #posN = 0;
       #shape = {
         0:{0:{0:{x:0,y:0},1:{x:1,y:0},2:{x:1,y:1},3:{x:1,y:2}},
            1:{0:{x:2,y:0},1:{x:2,y:1},2:{x:1,y:1},3:{x:0,y:1}},
@@ -181,7 +183,7 @@
         //x,y현재좌표와 shape,pos로 state를 만듬
         //기존 좌표 제거
         //벨리데이션 만든 state를 현재 view와 비교함
-        
+        this.#pos =this;
         this.#current.pos += 1;
         if(this.#current.pos === 4)
           this.#current.pos = 0;
@@ -199,9 +201,7 @@
         }
 //Math.floor(Math.random() * 7)
         this.#prevShape = [];
-        this.#current = {x: parseInt(this.#x/2),y:0,state:{},shape:Math.floor(Math.random() * 7),pos:0};
-        this.pos();
-
+        this.#current = {x: parseInt(this.#x/2),y:0,state:{},shape:5,pos:0};
         let viewChekc = 0;
         for(let i = 0;i<this.#y;i++){
 
@@ -222,15 +222,33 @@
 
       }
       process(xy){
-
         //체크성공 가정
-        if(this.move(xy)){
-          this.create();
-        };
+        // if(this.move(xy)){
+        //   this.create();
+        // }else if(){
+        //   this.pos1();
+        // };
 
-        
+        switch (this.move(xy)) {
+          case true:
+          this.create();
+            break;
+          case false:
+          this.pos1();
+          break;
+          default:
+            break;
+        }
         //계산후 땅이면 생성
         this.render();
+      }
+      pos1(){
+
+        if(this.#pos){
+          this.move({x:this.#posN,y:0});
+          this.#pos = false;
+          this.#posN = 0;
+        }
       }
 
       move(xy){
@@ -252,8 +270,12 @@
         }
         for (let index = 0; index < 4; index++) {
           if(currentCopy.state[index].x>=this.#x){
+            this.#posN = -(this.#currentCopy.state[index].x - this.#x);
+            console.log(this.#posN);
             return false;
           }else if(currentCopy.state[index].x<0){
+            this.#posN = this.#currentCopy.state[index].x -= -this.#currentCopy.state[index].x;
+            console.log(this.#posN);
             return false;
           }else if(currentCopy.state[index].y>=this.#y){
             return true;
